src/main/minigo/parser/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "'='", "':='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'.'", "':'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "NL", "WS", "LINE_COMMENT", "MULTI_LINE_COMMENT", 
                      "IF", "ELSE", "FOR", "RETURN", "FUNC", "TYPE", "STRUCT", 
                      "INTERFACE", "STRING", "INT", "FLOAT", "BOOLEAN", 
                      "CONST", "VAR", "CONTINUE", "BREAK", "RANGE", "NIL", 
                      "TRUE", "FALSE", "PLUS", "MINUS", "STAR", "SLASH", 
                      "MOD", "EQUALS", "NOT_EQUALS", "LESS_THAN", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "AND", "OR", 
                      "NOT", "ASSIGN", "COLON_ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "MOD_ASSIGN", "DOT", 
                      "COLON", "L_PAREN", "R_PAREN", "L_BRACE", "R_BRACE", 
                      "L_BRACKET", "R_BRACKET", "COMMA", "SEMICOLON", "IDENTIFIER", 
                      "DECIMAL_INT", "BINARY_INT", "OCTAL_INT", "HEX_INT", 
                      "FLOAT_LIT", "STRING_LIT", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_declList = 1
    RULE_decl = 2
    RULE_declBody = 3
    RULE_varDecl = 4
    RULE_varDeclWithInit = 5
    RULE_type_ = 6
    RULE_basicTypeAndStruct = 7
    RULE_initilization = 8
    RULE_constDecl = 9
    RULE_funcDecl = 10
    RULE_signature = 11
    RULE_parameterList = 12
    RULE_returnType = 13
    RULE_parameterDeclList = 14
    RULE_nonNullParameterDeclList = 15
    RULE_identifierList = 16
    RULE_block = 17
    RULE_stmtList = 18
    RULE_nonNullStmtList = 19
    RULE_methodDefine = 20
    RULE_receiver = 21
    RULE_receiverType = 22
    RULE_structDecl = 23
    RULE_structBody = 24
    RULE_fieldDeclList = 25
    RULE_nonNullFieldDeclList = 26
    RULE_fieldDecl = 27
    RULE_interfaceDecl = 28
    RULE_interfaceBody = 29
    RULE_methodDeclList = 30
    RULE_nonNullMethodDeclList = 31
    RULE_methodDecl = 32
    RULE_stmt = 33
    RULE_stmtBody = 34
    RULE_assignStmt = 35
    RULE_lhs = 36
    RULE_assignOp = 37
    RULE_rhs = 38
    RULE_ifStmt = 39
    RULE_ifCondition = 40
    RULE_elseStmt = 41
    RULE_forStmt = 42
    RULE_forCondition = 43
    RULE_forLoop = 44
    RULE_forLoopInit = 45
    RULE_forLoopUpdate = 46
    RULE_forRange = 47
    RULE_forIndex = 48
    RULE_forValue = 49
    RULE_rangeExpr = 50
    RULE_breakStmt = 51
    RULE_continueStmt = 52
    RULE_callStmt = 53
    RULE_returnStmt = 54
    RULE_literal = 55
    RULE_basicLit = 56
    RULE_integerLit = 57
    RULE_arrayLit = 58
    RULE_arrayType = 59
    RULE_arrayTypeIndex = 60
    RULE_arrayElementType = 61
    RULE_arrayValue = 62
    RULE_arrayList = 63
    RULE_nonNullArrayList = 64
    RULE_arrayElement = 65
    RULE_structLit = 66
    RULE_structType = 67
    RULE_structValue = 68
    RULE_keyedElementList = 69
    RULE_nonNullKeyedElementList = 70
    RULE_keyedElement = 71
    RULE_key = 72
    RULE_element = 73
    RULE_expression = 74
    RULE_logAndExpr = 75
    RULE_relExpr = 76
    RULE_addExpr = 77
    RULE_mulExpr = 78
    RULE_unaryExpr = 79
    RULE_primaryExpr = 80
    RULE_fieldAccess = 81
    RULE_arrayAccess = 82
    RULE_arguments = 83
    RULE_argumentList = 84
    RULE_nonNullArgumentList = 85
    RULE_operand = 86
    RULE_eos = 87

    ruleNames =  [ "program", "declList", "decl", "declBody", "varDecl", 
                   "varDeclWithInit", "type_", "basicTypeAndStruct", "initilization", 
                   "constDecl", "funcDecl", "signature", "parameterList", 
                   "returnType", "parameterDeclList", "nonNullParameterDeclList", 
                   "identifierList", "block", "stmtList", "nonNullStmtList", 
                   "methodDefine", "receiver", "receiverType", "structDecl", 
                   "structBody", "fieldDeclList", "nonNullFieldDeclList", 
                   "fieldDecl", "interfaceDecl", "interfaceBody", "methodDeclList", 
                   "nonNullMethodDeclList", "methodDecl", "stmt", "stmtBody", 
                   "assignStmt", "lhs", "assignOp", "rhs", "ifStmt", "ifCondition", 
                   "elseStmt", "forStmt", "forCondition", "forLoop", "forLoopInit", 
                   "forLoopUpdate", "forRange", "forIndex", "forValue", 
                   "rangeExpr", "breakStmt", "continueStmt", "callStmt", 
                   "returnStmt", "literal", "basicLit", "integerLit", "arrayLit", 
                   "arrayType", "arrayTypeIndex", "arrayElementType", "arrayValue", 
                   "arrayList", "nonNullArrayList", "arrayElement", "structLit", 
                   "structType", "structValue", "keyedElementList", "nonNullKeyedElementList", 
                   "keyedElement", "key", "element", "expression", "logAndExpr", 
                   "relExpr", "addExpr", "mulExpr", "unaryExpr", "primaryExpr", 
                   "fieldAccess", "arrayAccess", "arguments", "argumentList", 
                   "nonNullArgumentList", "operand", "eos" ]

    EOF = Token.EOF
    NL=1
    WS=2
    LINE_COMMENT=3
    MULTI_LINE_COMMENT=4
    IF=5
    ELSE=6
    FOR=7
    RETURN=8
    FUNC=9
    TYPE=10
    STRUCT=11
    INTERFACE=12
    STRING=13
    INT=14
    FLOAT=15
    BOOLEAN=16
    CONST=17
    VAR=18
    CONTINUE=19
    BREAK=20
    RANGE=21
    NIL=22
    TRUE=23
    FALSE=24
    PLUS=25
    MINUS=26
    STAR=27
    SLASH=28
    MOD=29
    EQUALS=30
    NOT_EQUALS=31
    LESS_THAN=32
    LESS_THAN_OR_EQUAL=33
    GREATER_THAN=34
    GREATER_THAN_OR_EQUAL=35
    AND=36
    OR=37
    NOT=38
    ASSIGN=39
    COLON_ASSIGN=40
    PLUS_ASSIGN=41
    MINUS_ASSIGN=42
    STAR_ASSIGN=43
    SLASH_ASSIGN=44
    MOD_ASSIGN=45
    DOT=46
    COLON=47
    L_PAREN=48
    R_PAREN=49
    L_BRACE=50
    R_BRACE=51
    L_BRACKET=52
    R_BRACKET=53
    COMMA=54
    SEMICOLON=55
    IDENTIFIER=56
    DECIMAL_INT=57
    BINARY_INT=58
    OCTAL_INT=59
    HEX_INT=60
    FLOAT_LIT=61
    STRING_LIT=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declList(self):
            return self.getTypedRuleContext(MiniGoParser.DeclListContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.declList(0)
            self.state = 177
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def declList(self):
            return self.getTypedRuleContext(MiniGoParser.DeclListContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclList" ):
                return visitor.visitDeclList(self)
            else:
                return visitor.visitChildren(self)



    def declList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.DeclListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_declList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.decl()
            self._ctx.stop = self._input.LT(-1)
            self.state = 186
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.DeclListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_declList)
                    self.state = 182
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 183
                    self.decl() 
                self.state = 188
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declBody(self):
            return self.getTypedRuleContext(MiniGoParser.DeclBodyContext,0)


        def eos(self):
            return self.getTypedRuleContext(MiniGoParser.EosContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.declBody()
            self.state = 190
            self.eos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MiniGoParser.VarDeclContext,0)


        def constDecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncDeclContext,0)


        def methodDefine(self):
            return self.getTypedRuleContext(MiniGoParser.MethodDefineContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(MiniGoParser.StructDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(MiniGoParser.InterfaceDeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclBody" ):
                return visitor.visitDeclBody(self)
            else:
                return visitor.visitChildren(self)




    def declBody(self):

        localctx = MiniGoParser.DeclBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declBody)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.constDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 194
                self.funcDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 195
                self.methodDefine()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 196
                self.structDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 197
                self.interfaceDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclWithInit(self):
            return self.getTypedRuleContext(MiniGoParser.VarDeclWithInitContext,0)


        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniGoParser.Type_Context,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MiniGoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.varDeclWithInit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(MiniGoParser.VAR)
                self.state = 202
                self.match(MiniGoParser.IDENTIFIER)
                self.state = 203
                self.type_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclWithInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(MiniGoParser.Type_Context,0)


        def initilization(self):
            return self.getTypedRuleContext(MiniGoParser.InitilizationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_varDeclWithInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclWithInit" ):
                return visitor.visitVarDeclWithInit(self)
            else:
                return visitor.visitChildren(self)




    def varDeclWithInit(self):

        localctx = MiniGoParser.VarDeclWithInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varDeclWithInit)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.match(MiniGoParser.VAR)
                self.state = 207
                self.match(MiniGoParser.IDENTIFIER)
                self.state = 208
                self.type_()
                self.state = 209
                self.initilization()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.match(MiniGoParser.VAR)
                self.state = 212
                self.match(MiniGoParser.IDENTIFIER)
                self.state = 213
                self.initilization()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicTypeAndStruct(self):
            return self.getTypedRuleContext(MiniGoParser.BasicTypeAndStructContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MiniGoParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_type_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_" ):
                return visitor.visitType_(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MiniGoParser.Type_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.STRING, MiniGoParser.INT, MiniGoParser.FLOAT, MiniGoParser.BOOLEAN, MiniGoParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 216
                self.basicTypeAndStruct()
                pass
            elif token in [MiniGoParser.L_BRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 217
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BasicTypeAndStructContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def STRING(self):
            return self.getToken(MiniGoParser.STRING, 0)

        def INT(self):
            return self.getToken(MiniGoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MiniGoParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MiniGoParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_basicTypeAndStruct

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasicTypeAndStruct" ):
                return visitor.visitBasicTypeAndStruct(self)
            else:
                return visitor.visitChildren(self)




    def basicTypeAndStruct(self):

        localctx = MiniGoParser.BasicTypeAndStructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_basicTypeAndStruct)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.STRING) | (1 << MiniGoParser.INT) | (1 << MiniGoParser.FLOAT) | (1 << MiniGoParser.BOOLEAN) | (1 << MiniGoParser.IDENTIFIER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitilizationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_initilization

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitilization" ):
                return visitor.visitInitilization(self)
            else:
                return visitor.visitChildren(self)




    def initilization(self):

        localctx = MiniGoParser.InitilizationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initilization)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.match(MiniGoParser.ASSIGN)
            self.state = 223
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def initilization(self):
            return self.getTypedRuleContext(MiniGoParser.InitilizationContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_constDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):
